--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     </style>
     <link
       rel="shortcut icon"
-      href="/image_2023-09-07_110754160.png"
+      href="/favicon.png"
       type="icon/png"
       sizes="32x32"
     />
